--- a/css/style.css
+++ b/css/style.css
@@ -84,14 +84,27 @@ header {
   text-decoration: none;
 }
 
-li a:nth-child(4) {
+/*li a:nth-child(4) {
   padding-left: 71px;
+}
+*/
+
+ul.left {
+  float: left;
+  width: 40%;
+}
+
+ul.right {
+  float: right;
+  width: 40%;
 }
 
 a.menu-logo img {
-  position: absolute;
-  left: 0;
-  right: 0;
+  position: relative;
+  padding-left: 50px;
+  top: 15px;
+
+
   margin: -15px auto;
   background-position: center;
 }
@@ -104,7 +117,7 @@ a.menu-logo img {
   line-height: 25px;
   vertical-align: top;
   text-align: center;
-  width: 20%;
+  width: 50%;
 }
 
 .menu-navigator ul {
@@ -146,7 +159,12 @@ img.card-sedona {
   vertical-align: middle;
 }
 
-.card-welcome-sedona {
+img.mask {
+  position: absolute;
+  top: 509px;
+}
+
+.card {
   margin: 0 auto;
   padding: 0px;
   background: url(img/background-1.jpg);
@@ -167,13 +185,13 @@ img.card-sedona {
 
 .about-1 {
   margin: 0 auto;
-  line-height: 23px;
+  line-height: 21px;
 }
 
 
 .about-2 {
   margin: 0 auto;
-  line-height: 23px;
+  line-height: 26px;
   padding-top: 32px;
 }
 
@@ -198,6 +216,7 @@ img.card-sedona {
   min-height: 255px;
   box-sizing: border-box;
   float: left;
+  line-height: 21px;
   text-align: center;
 }
 
@@ -231,12 +250,13 @@ p.city-life {
 .pluses-block-1 {
   width: 400px;
   margin: 0 auto;
-  padding-top: 58px;
+  padding-top: 59px;
   padding-bottom: 68px;
   padding-left: 57px;
   padding-right: 57px;
   box-sizing: border-box;
   float: left;
+  line-height: 21px;
   text-align: center;
 }
 
@@ -274,6 +294,8 @@ p.pluses-p {
   min-height: 255px;
   box-sizing: border-box;
   float: right;
+
+  line-height: 21px;
   text-align: center;
 }
 
@@ -310,6 +332,7 @@ p.rocks-p {
   padding-right: 60px;
   box-sizing: border-box;
   float: left;
+  line-height: 21px;
   text-align: center;
 }
 
@@ -366,8 +389,6 @@ p.rocks-p {
 }
 
 
-
-
 .form-index input {
   font-size: 14px;
   line-height: 21px;
@@ -382,6 +403,7 @@ p.rocks-p {
   background: #766357;
   padding: 32px;
   font-size: 21px;
+  line-height: 26px;
   font-weight: bold;
   text-align: center;
 }
@@ -393,11 +415,12 @@ p.rocks-p {
 
 form.form-index {
   width: 570px;
-  padding: 55px 55px;
+  padding: 48px 55px;
   /*padding-bottom: 25px;*/
   margin: 0px auto;
   background: #fff;
   box-sizing: border-box;
+  line-height: 26px;
 }
 
 
@@ -442,7 +465,7 @@ div.arrive, div.departure {
   border: none;
   width: 285px;
   outline: none;
-  padding-top: 8px;
+  padding-top: 12px;
   padding-bottom: 8px;
   padding-left: 15px;
 }
@@ -456,6 +479,9 @@ div.arrive, div.departure {
   border: 2px solid #f2f2f2;
 }
 
+button {
+  cursor: pointer;
+}
 
 button.arrdep-cal { /*===***КАЛЕНДАРЬ***===*/
   display: block;
@@ -464,6 +490,7 @@ button.arrdep-cal { /*===***КАЛЕНДАРЬ***===*/
   width: 38px;
   margin: 0;
   float: right;
+
   border: 0;
   background-image: url("../img/calendar.png");
   background-position: center;
@@ -623,7 +650,7 @@ input.btn-form:active {
 /*НАЧАЛО секция с КАРТОЙ*/
 iframe {
   margin: 0px auto;
-  height: 472px;
+  height: 595px;
   border: 0px;
   vertical-align: middle;
 }
@@ -643,6 +670,7 @@ main.hotels {
   margin: 0 auto;
   max-height: 215px;
   padding: 0;
+  line-height: 21px;
   background: url("../img/background-2-small.jpg");
   color: #fff;
 }
@@ -878,6 +906,7 @@ input[type="checkbox"]:checked:disabled + label::before {
   width: 165px;
   float: left;
   display: inline-block;
+  line-height: 26px;
 }
 
 .search-sorting {
@@ -885,12 +914,15 @@ input[type="checkbox"]:checked:disabled + label::before {
   display: inline-block;
   font-size: 12px;
   line-height: 18px;
+  padding-top: 5px;
 }
 
 .search-left-size {
   float: left;
-  padding: 17px 70px;
-  padding-bottom: 32px;
+  padding-left: 70px;
+  padding-right: 70px;
+  padding-top: 15px;
+  padding-bottom: 30px;
   background: #fff;
 }
 
@@ -994,7 +1026,8 @@ a.menu-active-down {
 .found-1 {
   margin: 0px;
   border-top: 2px solid #f2f2f2;
-  padding: 25px 73px;
+  padding: 22px 71px;
+  padding-bottom: 28px;
   background: #fff;
   box-sizing: border-box;
 }
@@ -1017,6 +1050,7 @@ a.menu-active-down {
   width: 370px;
   margin: 0px;
   padding: 0px;
+  padding-top: 3px;
   float: left;
 }
 
@@ -1151,20 +1185,22 @@ a.found-button-book:active {
   width: 110px;
   float: right;
   margin: 0;
-  /*padding: 30px 73px;*/
+  padding-right: 3px;
 }
 
 .rating-stars {
   float: right;
   padding-bottom: 45px;
+  padding-top: 5px;
 }
 
 .rating-number {
   width: 110px;
   background: #f2f2f2;
   float: right;
-  padding-top: 2px;
+  /*padding-top: 2px;*/
   padding-bottom: 2px;
+  line-height: 21px;
 }
 
 .rating-number p {
@@ -1179,17 +1215,20 @@ a.found-button-book:active {
 
 /*НАЧАЛО секция с ФУТЕРОМ*/
 footer {
+  position: absolute;
+  right: 0;
+  left: 0;
   background: #fff;
   border-top: 2px solid #f2f2f2;
   margin: 0px auto;
-  padding-top: 21px;
+  padding-top: 17px;
   padding-bottom: 30px;
 }
 
 .link-first {
   padding-top: 25px;
   float: left;
-  width: 400px;
+  width: 398px;
   margin: 0px auto;
   text-align: center;
 }
@@ -1207,6 +1246,7 @@ footer {
   width: 398px;
   margin: 0px auto;
   padding-top: 18px;
+  line-height: 26px;
   text-align: center;
 }
 
@@ -1274,8 +1314,8 @@ div.html-academy {
   font-size: 14px;
   color: black;
   margin: 0 auto;
-  padding-left: 42px;
-  padding-top: 10px;
+  padding-left: 41px;
+  padding-top: 7px;
   text-decoration: none;
   text-align: center;
   float: left;
