--- a/css/style.css
+++ b/css/style.css
@@ -1218,6 +1218,9 @@ footer {
   position: absolute;
   right: 0;
   left: 0;
+  /*bottom: 0;*/
+  /*z-index: 200px;*/
+  opacity: 0.9;
   background: #fff;
   border-top: 2px solid #f2f2f2;
   margin: 0px auto;
