--- a/css/style.css
+++ b/css/style.css
@@ -61,13 +61,16 @@ h2 {
 }
 /*КОНЕЦ основные свойства боди*/
 
-header, main, footer {
+.shadow {
+  width: 1200px;
+  margin: 0 auto;
+  position: relative;
   box-shadow: 0 10px 15px rgba(0,0,0,0.5);
 }
 
-.container {
+/*.container {
   width: 1200px;
-}
+}*/
 /*НАЧАЛО ХЕДЕР*/
 header {
   min-height: 56px;
@@ -650,6 +653,7 @@ input.btn-form:active {
 /*НАЧАЛО секция с КАРТОЙ*/
 iframe {
   margin: 0px auto;
+  width: 1200px;
   height: 595px;
   border: 0px;
   vertical-align: middle;
@@ -1218,9 +1222,17 @@ footer {
   position: absolute;
   right: 0;
   left: 0;
-  /*bottom: 0;*/
-  /*z-index: 200px;*/
+  bottom: 0;
   opacity: 0.9;
+  background: #fff;
+  border-top: 2px solid #f2f2f2;
+  margin: 0px auto;
+  padding-top: 17px;
+  padding-bottom: 30px;
+}
+
+footer.hotels {
+  position: relative;
   background: #fff;
   border-top: 2px solid #f2f2f2;
   margin: 0px auto;
