--- a/css/style.css
+++ b/css/style.css
@@ -102,14 +102,19 @@ ul.right {
   width: 40%;
 }
 
+a.menu-logo {
+  display: inline-block;
+  width: 20%;
+  text-align: center;
+}
+
 a.menu-logo img {
   position: relative;
-  padding-left: 50px;
+  /*padding-left: 50px;*/
   top: 15px;
-
-
   margin: -15px auto;
   background-position: center;
+  z-index: 1;
 }
 
 .menu-navigator li {
@@ -117,7 +122,7 @@ a.menu-logo img {
   position: relative;
   padding: 15px 0;
   font-size: 14px;
-  line-height: 25px;
+  line-height: 26px;
   vertical-align: top;
   text-align: center;
   width: 50%;
@@ -182,20 +187,20 @@ img.mask {
 .about {
   background: #fff;
   margin: 0 auto;
-  padding-top: 65px;
+  padding-top: 60px;
   padding-bottom: 52px;
 }
 
 .about-1 {
   margin: 0 auto;
-  line-height: 21px;
+  line-height: 26px;
 }
 
 
 .about-2 {
   margin: 0 auto;
   line-height: 26px;
-  padding-top: 32px;
+  padding-top: 27px;
 }
 
 .align {
@@ -404,7 +409,8 @@ p.rocks-p {
 
 .search-link-block {
   background: #766357;
-  padding: 32px;
+  padding: 30px;
+  padding-bottom: 28px;
   font-size: 21px;
   line-height: 26px;
   font-weight: bold;
@@ -418,7 +424,7 @@ p.rocks-p {
 
 form.form-index {
   width: 570px;
-  padding: 48px 55px;
+  padding: 53px 55px;
   /*padding-bottom: 25px;*/
   margin: 0px auto;
   background: #fff;
@@ -466,7 +472,7 @@ div.arrive, div.departure {
 #booking-arrive-date, #booking-departure-date {
   background: transparent;
   border: none;
-  width: 285px;
+  width: 293px;
   outline: none;
   padding-top: 12px;
   padding-bottom: 8px;
@@ -654,7 +660,7 @@ input.btn-form:active {
 iframe {
   margin: 0px auto;
   width: 1200px;
-  height: 595px;
+  height: 585px;
   border: 0px;
   vertical-align: middle;
 }
@@ -666,13 +672,14 @@ main.hotels {
   width: 1200px;
   background: #f2f2f2;
   margin: 0 auto;
+  padding-bottom: 113px;
 }
 
 /*НАЧАЛО форма с фильтром жилья*/
 
 .filter {
   margin: 0 auto;
-  max-height: 215px;
+  max-height: 220px;
   padding: 0;
   line-height: 21px;
   background: url("../img/background-2-small.jpg");
@@ -1030,7 +1037,7 @@ a.menu-active-down {
 .found-1 {
   margin: 0px;
   border-top: 2px solid #f2f2f2;
-  padding: 22px 71px;
+  padding: 12px 72px;
   padding-bottom: 28px;
   background: #fff;
   box-sizing: border-box;
@@ -1039,6 +1046,7 @@ a.menu-active-down {
 .found-houses {  /*--общий для блока с рисунком и отелем*/
   width: 600px;
   float: left;
+  padding-top: 11px;
 }
 
 .found-houses-img {
@@ -1054,7 +1062,6 @@ a.menu-active-down {
   width: 370px;
   margin: 0px;
   padding: 0px;
-  padding-top: 3px;
   float: left;
 }
 
@@ -1063,12 +1070,13 @@ a.menu-active-down {
   float: left;
   padding: 0px;
   margin: 0px;
+  line-height: 26px;
 }
 
 a.found-info-title {
   font-size: 21px;
   font-weight: bold;
-  line-height: 21px;
+
   text-decoration: none;
 }
 
@@ -1095,25 +1103,26 @@ a.found-info-title:active {
   width: 270px;
   float: left;
   margin: 0px;
-  padding: 0px;
+  padding: 3px 0;
+  line-height: 21px;
 }
 
 .found-houses-type { /*--блок с гостиницей*/
   width: 115px;
   float: left;
-  line-height: 10px;
 }
 
 .found-houses-price { /*--блок с ценой*/
   width: 70px;
   float: left;
-  line-height: 10px;
 }
 
 .found-button { /*--блок с кнопками подробнее и забронировать*/
   width: 270px;
   float: left;
-  padding-top: 5px;
+  padding-top: 15px;
+
+
 }
 
 /*--начало блок с кнопками подробнее */
@@ -1189,13 +1198,12 @@ a.found-button-book:active {
   width: 110px;
   float: right;
   margin: 0;
-  padding-right: 3px;
 }
 
 .rating-stars {
   float: right;
   padding-bottom: 45px;
-  padding-top: 5px;
+  padding-top: 15px;
 }
 
 .rating-number {
@@ -1227,17 +1235,9 @@ footer {
   background: #fff;
   border-top: 2px solid #f2f2f2;
   margin: 0px auto;
-  padding-top: 17px;
+  padding-top: 20px;
   padding-bottom: 30px;
-}
-
-footer.hotels {
-  position: relative;
-  background: #fff;
-  border-top: 2px solid #f2f2f2;
-  margin: 0px auto;
-  padding-top: 17px;
-  padding-bottom: 30px;
+  line-height: 26px;
 }
 
 .link-first {
@@ -1251,7 +1251,7 @@ footer.hotels {
 .link-second {
   float: left;
   width: 400px;
-  padding-top: 16px;
+  padding-top: 15px;
   margin: 0px auto;
   text-align: center;
 }
